# apertium-en-gl

./: .gitattributes  .gitignore  Makefile.am  README  configure.ac
t/: latest-pending.results  latest-regression.results
test/: en-gl-regression-input.txt  en-gl-regression-interchunk-expected.txt  en-gl-regression-morph-expected.txt  en-gl-regression-postchunk-expected.txt  en-gl-regression-postgen-expected.txt  en-gl-regression-postgen-gold.txt  en-gl-regression-tagger-expected.txt  tests.json
